# fastapi-boilerplate

./: .dockerignore_example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: main.py
src/app/api/v1/: health.py
src/app/common/: response.py
src/app/core/: config.py  exceptions.py  logging.py  middleware.py
